# umba-brief-scanner

./: .gitignore  .md-pp.options  .set_sln.bat  CMakeLists.txt  README.md  README.md_  _build_all_msvc.bat  _generate_msvc.bat  _precommit.bat  _start_msvc.bat  copy_distr_conf_to_msvc2019_out.bat  copy_distr_conf_to_out.bat  deploy_local.bat  make_distr.bat  make_sources_brief.bat  set_sln.bat  umba-brief-scanner-help.bat  umba-brief-scanner-msvc2019.sln  umba-brief-scanner.rsp  umba-brief-scanner.sln  umba-pretty-headers.sln
.msvc2019/: qt_stub.vcxproj  test01.vcxproj  test02.vcxproj  test03.vcxproj  umba-brief-scanner.vcxproj  umba_prjdirs.props
_distr_conf/conf/: umba-brief-scanner.options
_libs/: .gitignore  _clone_libs.bat  _git-job-impl.bat  clone_libs_http.bat  clone_libs_https.bat  clone_libs_ssh.bat
_libs/umba/: text_utils.h
_prj_cmake/: CMakeLists.txt
_prj_msvc2019/: qt_stub.vcxproj  test01.vcxproj  test02.vcxproj  test03.vcxproj  umba-brief-scanner.vcxproj
_src/umba-brief-scanner/: app_config.h  app_ver_config.h  arg_parser.h  brief_info.h  commentUtils.h  cpp-tokenizer.h  enums.h  log.h  mdlex.h  notes.h  notes_impl.h  qt_stub.cpp  signature.h  test0.cpp  test04.cpp  test05.cpp  umba-brief-scanner.cpp  utils.h
_src/umba-brief-scanner/_generators/: .gitignore  OutputFormat.txt  _generate_all.bat  umba-enum-gen-options.txt
conf/: umba-brief-scanner.options
doc/: Index.md  _found-attentions.md  _found-notes.md  _found-todos.md  _sources_brief.html  _sources_brief.md  _sources_brief.md_  _sources_brief.txt  sources_brief.txt  Исходные тексты.md  Списки замечаний в исходном коде.md  Списки замечаний в исходном коде.md_
doc/_md/: _found-attentions.md  _found-todos.md  entry_points.md_  sources-stat-by-percent.md_  sources-stat-by-percent.txt  sources-stat.md_  sources-stat.txt  sources_brief.md_
src/main/: app_config.h  arg_parser.h  brief_info.h  main.cpp  test00.cpp  test01.cpp  test02.cpp  test03.cpp  umba-brief-scanner.cpp  utils.h
src/umba-brief-scanner/: app_config.h  app_ver_config.h  arg_parser.h  brief_info.h  commentUtils.h  enums_manual.h  log.h  main.cpp  signature.h  test01.cpp  test02.cpp  test03.cpp  umba-brief-scanner.cpp
tests/: _set_cmn_opts_sample.bat  _set_pp_sample.bat  _setup.bat  make_sources_brief-wlog.bat  make_sources_brief.bat  test05.bat  test_doxyfication.bat  test_doxyfication_wlog.bat
tests/data/: test01.rsp
